bk_ida/gccida/g1/expand_builtin_prefetch
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/builtins.c:1190:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/builtins.c:1218:36: error: use of undeclared identifier 'machine_mode'
v6 = expand_expr( elements, 0LL, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), EXPAND_NORMAL); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/builtins.c:1243:73: error: use of undeclared identifier 'insn_data_0'
if ( !insn_data_0[1316].operand->predicate( v6, *( ( unsigned __int16 *)insn_data_0[1316].operand + 8)) ) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/builtins.c:1243:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[1316].operand->predicate( v6, *( ( unsigned __int16 *)insn_data_0[1316].operand + 8)) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/builtins.c:1244:19: error: use of undeclared identifier 'machine_mode'
v6 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v6); 
                  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_prefetch/src/obj/builtins.o] Error 1
